# app/openapi/model_blocked_ip_address.go
@@ -1,0 +1,39 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Lanyard Ops API
+ *
+ * The Lanyard Ops API simplifies API key management for organizations by providing powerful tools to create, manage, and monitor API access securely. It allows teams to generate scoped API keys, configure rate limits, track usage, and integrate seamlessly with existing services.
+ *
+ * API version: 1.0
+ * Contact: info@payloadops.com
+ */
+
+package openapi
+
+import (
+	"time"
+)
+
+// BlockedIpAddress - Information of blocked IP address and reason
+type BlockedIpAddress struct {
+
+	// IP address to be blocked
+	IpAddress string `json:"ipAddress,omitempty"`
+
+	// Reason why the IP address was blocked
+	Reason string `json:"reason,omitempty"`
+
+	// The date when the block was created
+	CreatedAt time.Time `json:"createdAt,omitempty"`
+}
+
+// AssertBlockedIpAddressRequired checks if the required fields are not zero-ed
+func AssertBlockedIpAddressRequired(obj BlockedIpAddress) error {
+	return nil
+}
+
+// AssertBlockedIpAddressConstraints checks if the values respects the defined constraints
+func AssertBlockedIpAddressConstraints(obj BlockedIpAddress) error {
+	return nil
+}
